# db-studio

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CODE_STYLE.md  DESIGN.md  REVIEW.md  SUBAGENTS.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  profiles.rs  state.rs
src-tauri/src/commands/: connection.rs  data.rs  metadata.rs  mod.rs  query.rs
src-tauri/src/db/: mod.rs  mssql.rs  mysql.rs  postgres.rs  sql.rs  sqlite.rs  tunnel.rs  value.rs
src/api/: index.ts
src/components/: Modal.tsx  Toasts.tsx
src/features/connections/: ConnectionDialog.tsx  SchemaPicker.tsx  Sidebar.tsx
src/features/explorer/: SchemaTree.tsx  filterContext.tsx
src/features/grid/: ColumnEditDialog.tsx  DataGridTab.tsx  DdlPlanView.tsx  PrimaryKeyDialog.tsx  ResultTable.tsx  StructureView.tsx
src/features/layout/: AppShell.tsx  StatusBar.tsx  TabBar.tsx
src/features/query/: QueryTab.tsx
src/lib/: sqlText.ts  updater.ts
src/store/: connectionStore.ts  uiStore.ts  updateStore.ts  workspaceStore.ts
src/styles/: global.css  theme.css
src/types/: index.ts
